--- a/app/src/main/res/layout/activity_registrartion_part2.xml
+++ b/app/src/main/res/layout/activity_registrartion_part2.xml
@@ -4,8 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registrartion_part2"
+    tools:context=".Registration_part2"
     >
+
+    <TextView
+        android:id="@+id/TextView_RegistrationPart2_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:textColor="#FB0000"
+        android:text=""
+        />
 
     <RelativeLayout
         android:id="@+id/part2_RL2"
