--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,7 +80,7 @@
             android:layout_marginTop="40dp"
             android:text="Login"
             android:background="@drawable/roundedbutton"
-
+            android:onClick="Login"
             />
 
     </RelativeLayout>
