--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,15 +4,18 @@
 
     <!-- "Mark Favorite", should appear as action button if possible -->
     <item
-        android:id="@+id/action_favorite"
-        android:icon="@drawable/ic_baseline_favorite_24"
-        android:title="Favorite"
+        android:id="@+id/action_Search"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="Search"
         app:showAsAction="ifRoom"/>
 
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
         android:title="Settings"
-        android:icon="@drawable/ic_baseline_settings_24"
+        app:showAsAction="never"/>
+
+    <item android:id="@+id/action_Logout"
+        android:title="Log out"
         app:showAsAction="never"/>
 
 
