--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -11,5 +11,18 @@
 
     >
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="45dp"
+        android:layout_height="50dp"
+        android:src="@drawable/profile_pic"
+        app:civ_border_width="0.5dp"
+        android:layout_marginTop="05dp"
+        android:elevation="20dp"
+        />
+
+
+
 
 </androidx.appcompat.widget.Toolbar>
