--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,10 +4,11 @@
 
     <!-- "Mark Favorite", should appear as action button if possible -->
     <item
-        android:id="@+id/action_Search"
+        android:id="@+id/action_AddFriends"
         android:icon="@drawable/ic_baseline_person_add_24"
-        android:title="Search"
-        app:showAsAction="ifRoom"/>
+        android:title="Add Friends"
+        app:showAsAction="ifRoom"
+        android:onClick="AddFriends"/>
 
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
