--- a/app/src/main/res/layout/activity_open_user.xml
+++ b/app/src/main/res/layout/activity_open_user.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_arrow_back"
+            app:srcCompat="@drawable/ic_baseline_arrow_back"
             android:layout_marginLeft="10dp"
             android:onClick="goback"
             />
