--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -12,7 +12,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:onClick="back"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
+        android:src="@drawable/ic_baseline_arrow_back"
+        />
 
 
     <RelativeLayout
@@ -39,7 +40,7 @@
             android:layout_below="@+id/TextView_whatsyouname"
             android:layout_marginTop="30dp"
             android:background="@drawable/roundededittext"
-            android:hint="  First Nme"
+            android:hint="  First Name"
 
             />
 
