--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -20,6 +20,7 @@
         app:civ_border_width="0.5dp"
         android:layout_marginTop="05dp"
         android:elevation="200dp"
+        android:onClick="PRO"
         />
 
 
