--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -1,9 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyProfile">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_myProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:background="#03A9F4"
+        >
+        <ImageView
+            android:id="@+id/ImageView_BackButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_arrow_back_ios_24"
+            android:onClick="goback"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Profile"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            />
+    </androidx.appcompat.widget.Toolbar>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/ImageView_MyProfile_Pic"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/toolbar_myProfile"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/profile_pic"
+        />
+    <TextView
+        android:id="@+id/TextView_ChangePIC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change profile picture"
+        android:textColor="#0454B6"
+        android:textStyle="bold"
+        android:layout_below="@id/ImageView_MyProfile_Pic"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="30dp"
+        android:onClick="CangeProPic"/>
+
+    <TextView
+        android:id="@+id/TextView_MyProfile_Name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="  Name\n  Hasin Sadique "
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:drawableStart="@drawable/ic_person_black_24dp"
+        android:drawableEnd="@drawable/ic_baseline_edit_24"
+        android:layout_below="@id/TextView_ChangePIC"/>
+
+    <TextView
+        android:id="@+id/TextView_MyProfile_BIO"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="  Bio\n  Type Your Bio Here"
+        android:textColor="@color/black"
+        android:layout_below="@id/TextView_MyProfile_Name"
+        android:layout_alignLeft="@id/TextView_MyProfile_Name"
+        android:layout_alignRight="@id/TextView_MyProfile_Name"
+        android:layout_marginTop="10dp"
+        android:drawableStart="@drawable/ic_baseline_info_24"
+        android:drawableEnd="@drawable/ic_baseline_edit_24"
+        />
+    <TextView
+        android:id="@+id/TextView_MyProfile_Email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="  hasinsadique7@gmail.com"
+        android:textColor="@color/black"
+        android:layout_below="@id/TextView_MyProfile_BIO"
+        android:layout_alignLeft="@id/TextView_MyProfile_BIO"
+        android:layout_alignRight="@id/TextView_MyProfile_BIO"
+        android:layout_marginTop="10dp"
+        android:drawableStart="@drawable/ic_baseline_email_24"
+        android:drawableEnd="@drawable/ic_baseline_edit_24"
+        />
+
+    <TextView
+        android:id="@+id/TextView_MyProfile_Mobile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="  01766620839"
+        android:textColor="@color/black"
+        android:layout_below="@id/TextView_MyProfile_Email"
+        android:layout_alignLeft="@id/TextView_MyProfile_Email"
+        android:layout_alignRight="@id/TextView_MyProfile_Email"
+        android:layout_marginTop="10dp"
+        android:drawableStart="@drawable/ic_baseline_call_24"
+        android:drawableEnd="@drawable/ic_baseline_edit_24"
+        android:longClickable="true"
+        />
+
+
+
+</RelativeLayout>
