--- a/app/src/main/res/layout/activity_open_user.xml
+++ b/app/src/main/res/layout/activity_open_user.xml
@@ -6,87 +6,124 @@
     android:layout_height="match_parent"
     tools:context=".OpenUser"
     >
+
     <RelativeLayout
-        android:id="@+id/OpenUser_RL2"
+        android:id="@+id/OpenUser_RL3"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:paddingLeft="10dp"
+        android:layout_height="match_parent"
         >
+
         <ImageView
-            android:id="@+id/ImageView_AddFriends_BackButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_baseline_arrow_back"
-            android:layout_marginLeft="10dp"
-            android:onClick="goback"
+            android:id="@+id/ImageView_OpenUser_CoverPIC"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/bottomrounded_background"
             />
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/ImageView_UserProfilePic"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="190dp"
+            android:src="@drawable/profile_pic" />
+
+
+        <TextView
+            android:id="@+id/TextView_OpenUser_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ImageView_UserProfilePic"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:text="User Name"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <!--        <TextView-->
+        <!--            android:id="@+id/TextView_OpenUser_Bio"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_below="@id/TextView_OpenUser_username"-->
+        <!--            android:text="Bio"-->
+        <!--            android:gravity="center"-->
+        <!--            android:layout_marginTop="5dp"-->
+        <!--            android:layout_marginLeft="50dp"-->
+        <!--            android:layout_marginRight="50dp"-->
+        <!--            />-->
+
+
+        <Button
+            android:id="@+id/Button_addAsFriend"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/ImageView_OpenUser_CoverPIC"
+            android:layout_alignParentEnd="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/roundedbackground"
+            android:onClick="AddAsfriend"
+            android:text="Send request"
+            android:textColor="@color/white" />
+
+
+        <!--        <Button-->
+        <!--            android:id="@+id/Button_addAnonymously"-->
+        <!--            android:layout_width="270dp"-->
+        <!--            android:layout_height="40dp"-->
+        <!--            android:layout_below="@id/Button_addAsFriend"-->
+        <!--            android:layout_centerHorizontal="true"-->
+        <!--            android:layout_marginTop="20dp"-->
+        <!--            android:textColor="@color/white"-->
+        <!--            android:text="Add Friend Anonymously"-->
+        <!--            android:background="@drawable/roundedbackground"-->
+        <!--            android:onClick="AddfriendAnonymously"/>-->
+
+        <View
+            android:id="@+id/View_Divider"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_below="@id/TextView_OpenUser_username"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="15dp"
+            android:background="#3F3E42" />
+
+        <TextView
+            android:id="@+id/TextView_MutualFrnds"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/View_Divider"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:text="Mutual Friends"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/TextView_MutualFrnds"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="10dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+
     </RelativeLayout>
-    
     <ImageView
-        android:id="@+id/ImageView_UserProfilePic"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_person_black_24dp"
-        android:layout_below="@id/OpenUser_RL2"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/roundedprofilepic"
-        />
-    <TextView
-        android:id="@+id/TextView_OpenUser_username"
+        android:id="@+id/ImageView_AddFriends_BackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ImageView_UserProfilePic"
-        android:text="User Name"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
-
-    <Button
-        android:id="@+id/Button_addAsFriend"
-        android:layout_width="270dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/TextView_OpenUser_username"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="Add Friend"
-        android:background="@drawable/roundedbackground"
-        android:onClick="AddAsfriend"/>
-
-
-    <Button
-        android:id="@+id/Button_addAnonymously"
-        android:layout_width="270dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/Button_addAsFriend"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="Add Friend Anonymously"
-        android:background="@drawable/roundedbackground"
-        android:onClick="AddfriendAnonymously"/>
-    <TextView
-        android:id="@+id/TextView_MutualFrnds"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mutual Friends"
-        android:layout_below="@id/Button_addAnonymously"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:layout_marginLeft="15dp"
-        android:textSize="18dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:onClick="goback"
+        android:background="@drawable/roundedbutton"
+        android:src="@drawable/ic_baseline_arrow_back"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/TextView_MutualFrnds"
-        >
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-
-        
 </RelativeLayout>
